test/tests/stages/18_structures/invalid_types/extra_credit/scalar_required/compare_unions.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  union
  identifier(u)
  {
  long
  identifier(l)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  identifier(x)
  ==
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
